Fix middleware CheckRole, para poder buscar multiples roles, se termino el crud de media, se agrego endpon y servicio para guardar y regresar la imagen del medio.
