# routes/api.php
@@ -1,7 +1,8 @@
 <?php
 
 use App\Http\Controllers\Auth\AuthController;
-use Illuminate\Http\Request;
+use App\Http\Controllers\Media\MediaController;
+use App\Http\Controllers\Reservation\ReservationController;
 use Illuminate\Support\Facades\Route;
 
 Route::controller(AuthController::class)->group(function (){
@@ -10,5 +11,27 @@ Route::controller(AuthController::class)->group(function (){
         Route::get('/logout', 'logout')->name('logout');
         Route::get('/checkAuth', 'me')->name('me');
         Route::get('/refreshToken', 'refresh')->name('refreshToken');
+    });
+});
+
+Route::controller(MediaController::class)->group(function (){
+    Route::middleware(['auth:sanctum'])->prefix('media')->group(function (){
+        Route::get('/getMedia', 'index')->name('getMedia')->withoutMiddleware(['auth:sanctum']);
+        Route::get('/getMedia/{id}', 'show')->name('getMedia')->withoutMiddleware(['auth:sanctum']);
+        Route::post('/addMedia', 'store')->name('addMedia')->middleware('checkRole:Admin');
+        Route::put('/updateMedia/{id}', 'update')->name('updateMedia')->middleware('checkRole:Admin');
+        Route::delete('/deleteMedia/{id}', 'destroy')->name('deleteMedia')->middleware('checkRole:Admin');
+        //Image
+        Route::get('/getImageMedia/{id}', 'getImageMedia')->name('getImageMedia')->withoutMiddleware(['auth:sanctum']);
+    });
+});
+
+Route::controller(ReservationController::class)->group(function (){
+    Route::middleware(['auth:sanctum'])->prefix('reservation')->group(function (){
+        Route::get('/getReservation', 'index')->name('getReservation');
+        Route::get('/getReservation/{id}', 'show')->name('getReservation');
+        Route::post('/addReservation', 'store')->name('addReservation');
+        Route::put('/updateReservation/{id}', 'update')->name('updateReservation');
+        Route::delete('/deleteReservation/{id}', 'destroy')->name('deleteReservation');
     });
 });
